--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: ISA Manipal
+name: Goutham T S
 
 # Short bio or description (displayed in the header)
-description: The official student section of the ISA of MIT Manipal
+description: My experimenting blog.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/isamanipal/isamanipal.github.io/master/images/ISA-logo.png
