--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Goutham T S
 description: My experimenting blog.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/isamanipal/isamanipal.github.io/master/images/avatar.jfif
+avatar: https://raw.githubusercontent.com/isamanipal/isamanipal.github.io/master/images/avtar.jfif
 
 #
 # Flags below are optional
