--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Goutham T S
+name: goutham_2411
 
 # Short bio or description (displayed in the header)
 description: My experimenting blog.
