changed the mail adress.

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/goutham-2411/goutham-2411.github.io/ma
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: gothamtsgoutham9098@gmail.com
+  email: gouthamts24@gmail.com
   facebook: Goutham.T.S
   flickr:
   github: goutham-2411
